# mcp-learning

./: .gitignore  README.md
app/: main.py
app/modules/: helpers.py  pastebin.py
examples/logs_monitor_mcp_client/: main.py  pyproject.toml
examples/pastebinMCP/: pyproject.toml
examples/pastebinMCP/app/: main.py
examples/pastebinMCP/app/modules/: pastebin.py
tests/: test_pastebin_module.py
