[project]
name = "logs-monitor-mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-google-genai>=2.1.5",
    "langchain-mcp-adapters>=0.1.1",
    "langgraph>=0.4.7",
    "python-dotenv>=1.1.0",
    "python-lsp-server>=1.12.2",
]
