[project]
name = "mcp-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.9.0",
    "requests>=2.32.3",
    "ruff>=0.11.10",
    "xmltodict>=0.14.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "app"
]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
